# Contract-IQ

./: .dockerignore  .gitignore  .lintstagedrc  .prettierignore  AGENTS.md  CONTRACT-IQ-TUTORIAL.md  Dockerfile  README.md  competitive-analysis.md  customer-development-framework.md  mock-api.js  nixpacks.toml  package.json  pnpm-lock.yaml  pricing-strategy.md  sales-playbook.md  start.sh  tsconfig.base.json  turbo.json
apps/api/: README.md  __init__.py  pyproject.toml  requirements-simple.txt  requirements.txt
apps/api/contract_iq/: __init__.py  main.py
apps/api/contract_iq/repositories/: __init__.py  negotiation.py
apps/api/contract_iq/routers/: __init__.py  ai.py  alerts.py  contracts.py
apps/api/contract_iq/schemas/: __init__.py  ai.py  alerts.py  contracts.py
apps/api/contract_iq/services/: __init__.py  alerts.py  gemini.py  ingestion.py  multi_ai_orchestrator.py  openai_client.py
apps/api/tests/: __init__.py  test_ai_negotiation.py  test_alert_scheduler.py  test_contract_ingest.py  test_health.py  test_multi_ai_orchestrator.py
docs/: QA-SUMMARY.md  README.md  analytics-instrumentation.md  bulletproof-architecture.md  contract-template-research.md  data-incentives.md  demo-environment-plan.md  dev-cli-workaround.md  hosting-strategy-evaluation.md  ingestion-pipeline-plan.md  mvp-spec.md  product-roadmap.md  prototype-plan.md  qa-quick-reference.md  repo-scaffolding-plan.md  rule-benchmarks.md  sports-contract-market.md  testing-strategy.md  user-personas.md  ux-implementation-plan.md  ux-ui-redesign-v3.md  ux-v3-implementation-roadmap.md  (+1 more)
(+117 files in other folders)
