[tool.poetry]
name = "contract-iq-api"
version = "0.1.0"
description = "FastAPI service for Contract IQ"
authors = ["Contract IQ <engineering@contractiq.ai>"]
readme = "README.md"
packages = [{ include = "contract_iq" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.31.1" }
sqlalchemy = "^2.0.35"
pydantic = "^2.9.1"
google-generativeai = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
ruff = "^0.6.8"
black = "^24.10.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"